[package]
name = "tunnel-fight"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OSR combat simulator for tabletop RPGs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
